[package]
name = "directed-stage-macro"
version = "0.2.5"
edition = "2024"
description = "Core macro for directed crate"
license = "MIT"

[lib]
proc-macro = true

[features]
tokio = []

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
