[package]
name = "directed"
version = "0.1.6"
edition = "2024"
description = "Evaluate programs based on Directed Acyclic Graphs"
license = "MIT"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
keywords = ["graph", "DAG", "DSL"]
homepage = "https://github.com/Eolu/directed"
repository = "https://github.com/Eolu/directed"
documentation = "https://docs.rs/directed"

[dependencies]
directed-stage-macro = { version = "0.1.3", path = "../directed-stage-macro" }
daggy = "0.9"
slab = "0.4"
thiserror = "2.0"
