[package]
name = "directed"
version = "0.1.14"
edition = "2024"
description = "Evaluate programs based on Directed Acyclic Graphs"
license = "MIT"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
keywords = ["graph", "DAG", "DSL"]
homepage = "https://github.com/Eolu/directed"
repository = "https://github.com/Eolu/directed"
documentation = "https://docs.rs/directed"

[features]
tokio = ["dep:tokio", "dep:async-recursion", "dep:async-trait"]

[dependencies]
directed-stage-macro = { version = "0.1.7", path = "../directed-stage-macro" }
daggy = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"], optional = true }
async-recursion = { version = "1.1", optional = true}
async-trait = { version = "0.1", optional = true}
uuid = { version = "1.16.0", features = ["v4"]}
